--- a/acceuil.html
+++ b/acceuil.html
@@ -32,10 +32,10 @@
 
                               <!--  ASIDE FONCTIONNEMENT -->
 
-      <aside class="fonctionnement">
-        <h1>Fonctionnement</h1>
+      <section class="fonctionnement">
+        <h3>Fonctionnement</h3>
 
-        <ul class="liste-fonctionnement">
+        <ol class="liste-fonctionnement">
 
           <li>
         <fieldset class="step">
@@ -58,13 +58,13 @@
         </fieldset>
       </li>
 
-      </ul>
+      </ol>
 
-      </aside>
+      </section>
 
       <section class="restaurant">
         
-        <h1>Restaurants</h1>
+        <h3>Restaurants</h3>
 
         <ul class="liste-restaurant">
 
@@ -77,6 +77,7 @@
                 <p>Ménilmontant</p>
               </figcaption>
             </figure>
+            <span>nouveau</span>
           </a>
           </li>
 
@@ -89,6 +90,7 @@
                 <p>Charonne</p>
               </figcaption>
             </figure>
+            <span>nouveau</span>
           </a>
           </li>
 
