Avancement sur le css de la page acceuil

--- a/acceuil.html
+++ b/acceuil.html
@@ -26,7 +26,7 @@
           <div class="localisation">
             <i class="fas fa-map-marker-alt"></i>Paris,Belleville
           </div>
-          <h1>Réserver le menu qui vous convient</h1>
+          <h2>Réserver le menu qui vous convient</h2>
           <p>
             Découvrer des restaurants d'éxception, séléctionnés par nos soins.
           </p>
@@ -40,24 +40,21 @@
 
           <ol class="liste-fonctionnement">
             <li>
-              <fieldset class="step">
-                <legend>1</legend>
+              <div class="step">
                 <p><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</p>
-              </fieldset>
+              </div>
             </li>
 
             <li>
-              <fieldset class="step">
-                <legend>2</legend>
+              <div class="step">
                 <p><i class="fas fa-list-ul"></i>Composez votre menu</p>
-              </fieldset>
+              </div>
             </li>
 
             <li>
-              <fieldset class="step">
-                <legend>3</legend>
+              <div class="step">
                 <p><i class="fas fa-utensils"></i>Dégustez au restaurant</p>
-              </fieldset>
+              </div>
             </li>
           </ol>
         </section>
@@ -67,12 +64,13 @@
 
           <ul class="liste-restaurant">
             <li class="li-restaurant">
-              <a href="">
+              <a href="pages/la-palette-du-gout.html">
                 <figure class="card-restaurant">
                   <img src="images/restaurants/La palette du goût.jpg" alt="" />
                   <figcaption>
-                    <h2>La palette de goût</h2>
+                    <h4>La palette de goût</h4>
                     <p>Ménilmontant</p>
+                    <i class="far fa-heart"></i>
                   </figcaption>
                 </figure>
                 <span>nouveau</span>
@@ -80,12 +78,13 @@
             </li>
 
             <li class="li-restaurant">
-              <a href="">
+              <a href="pages/la-note-enchantee.html">
                 <figure class="card-restaurant">
                   <img src="images/restaurants/La note enchantée.jpg" alt="" />
                   <figcaption>
-                    <h2>La note anchantée</h2>
+                    <h4>La note anchantée</h4>
                     <p>Charonne</p>
+                    <i class="far fa-heart"></i>
                   </figcaption>
                 </figure>
                 <span>nouveau</span>
@@ -93,24 +92,26 @@
             </li>
 
             <li class="li-restaurant">
-              <a href="">
+              <a href="pages/a-la-francaise.html">
                 <figure class="card-restaurant">
                   <img src="images/restaurants/La francaise.jpg" alt="" />
                   <figcaption>
-                    <h2>A la francaise</h2>
+                    <h4>A la francaise</h4>
                     <p>Cité Rouge</p>
+                    <i class="far fa-heart"></i>
                   </figcaption>
                 </figure>
               </a>
             </li>
 
             <li class="li-restaurant">
-              <a href="">
+              <a href="pages/le-delice-de-sens.html">
                 <figure class="card-restaurant">
                   <img src="images/restaurants/Le délice des sens.jpg" alt="" />
                   <figcaption>
-                    <h2>Le délices des sens</h2>
+                    <h4>Le délices des sens</h4>
                     <p>Folie-Méricourt</p>
+                    <i class="far fa-heart"></i>
                   </figcaption>
                 </figure>
               </a>
@@ -120,9 +121,9 @@
 
         <footer class="footer">
           <img src="images/logo/ohmyfood.png" alt="" />
-          <ul>
-            <li>Proposer un restaurant</li>
-            <li>Devenir partenaire</li>
+          <ul class="liste-footer">
+            <li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
+            <li><i class="fas fa-hands-helping"></i>Devenir partenaire</li>
             <li>Mention légales</li>
             <li>contact</li>
           </ul>
