Visuel des pages des restaurant commencer, teste sur 2 pages différentes

--- a/acceuil.html
+++ b/acceuil.html
@@ -18,7 +18,7 @@
     <div class="container">
       <!--  HEADER -->
       <header class="header">
-        <img class="logo" src="images/logo/ohmyfood.png" alt="" />
+        <img class="logo logo--acceuil" src="images/logo/ohmyfood.png" alt="" />
       </header>
 
       <div class="main">
@@ -30,7 +30,7 @@
           <p>
             Découvrer des restaurants d'éxception, séléctionnés par nos soins.
           </p>
-          <button class="btn-search">Explorer nos restaurants</button>
+          <button class="btn btn--search">Explorer nos restaurants</button>
         </section>
 
         <!--  ASIDE FONCTIONNEMENT -->
