--- a/pages/a-la-francaise.html
+++ b/pages/a-la-francaise.html
@@ -4,108 +4,153 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="" />
+    <link href="/FontAnswome/css/all.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/.public/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap"
+      rel="stylesheet"
+    />
     <title>A la francaise</title>
   </head>
   <body>
-    <header>
-      <img src="/images/logo/ohmyfood.png " alt="" />
-    </header>
+    <div class="container">
+      <header class="header">
+        <a href="/acceuil.html"><i class="fas fa-arrow-left"></i></a>
+        <img
+          class="logo logo--restaurant"
+          src="/images/logo/ohmyfood.png"
+          alt=""
+        />
+      </header>
 
-    <container class="main">
+      <section class="image-menu">
+        <img src="/images/restaurants/La francaise.jpg" alt="" />
+      </section>
+
       <section class="menu-main">
         <h1>A la francaise</h1>
 
-        <article class="article-menu">
-          <h3></h3>
-          <ul>
-            <li>
-              <div class="menu">
-                <h3></h3>
-                <p></p>
-              </div>
-            </li>
+        <form action="" method="get">
+          <article class="article-menu">
+            <h3>ENTREES</h3>
+            <ul class="liste-menu">
+              <li>
+                <fieldset class="menu">
+                  <h4>Tartare de poulpe acidulé</h4>
+                  <p>Aux zestes d'orange<span>25€</span></p>
+                  <button class="btn-menu btn-menu__overlay">
+                    <i class="fas fa-check-circle"></i>
+                  </button>
+                </fieldset>
+              </li>
 
-            <li>
-              <div class="menu">
-                <h3></h3>
-                <p></p>
-              </div>
-            </li>
+              <li>
+                <fieldset class="menu">
+                  <h4>Velouté de légumes d'antan</h4>
+                  <p>Carottepanais, topinambour<span>35€</span></p>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle"></i>
+                  </button>
+                </fieldset>
+              </li>
 
-            <li>
-              <div class="menu">
-                <h3></h3>
-                <p></p>
-              </div>
-            </li>
-          </ul>
-        </article>
+              <li>
+                <fieldset class="menu">
+                  <h4>Soupe à l'ognon</h4>
+                  <p>Revisitée<span>20€</span></p>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle"></i>
+                  </button>
+                </fieldset>
+              </li>
+            </ul>
+          </article>
 
-        <article class="article-menu">
-          <h3></h3>
-          <ul>
-            <li>
-              <div class="menu">
-                <h3></h3>
-                <p></p>
-              </div>
-            </li>
+          <article class="article-menu">
+            <h3>PLATS</h3>
+            <ul class="liste-menu">
+              <li>
+                <fieldset class="menu">
+                  <h4>Coquille Saint-Jacques</h4>
+                  <p>Accompagnées d'une purée de panais<span>40€</span></p>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle"></i>
+                  </button>
+                </fieldset>
+              </li>
 
-            <li>
-              <div class="menu">
-                <h3></h3>
-                <p></p>
-              </div>
-            </li>
+              <li>
+                <fieldset class="menu">
+                  <h4>Magret de canard</h4>
+                  <p>Et parmentier de pommes de terres<span>35€</span></p>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle"></i>
+                  </button>
+                </fieldset>
+              </li>
 
-            <li>
-              <div class="menu">
-                <h3></h3>
-                <p></p>
-              </div>
-            </li>
-          </ul>
-        </article>
+              <li>
+                <fieldset class="menu">
+                  <h4>Pigeonneau d'Ille-et-Vilaine</h4>
+                  <p>Sur son lit de gnocchis aux légumes<span>44€</span></p>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle"></i>
+                  </button>
+                </fieldset>
+              </li>
+            </ul>
+          </article>
 
-        <article class="article-menu">
-          <h3></h3>
-          <ul>
-            <li>
-              <div class="menu">
-                <h3></h3>
-                <p></p>
-              </div>
-            </li>
+          <article class="article-menu">
+            <h3>DESSERTS</h3>
+            <ul class="liste-menu">
+              <li>
+                <fieldset class="menu">
+                  <h4>Pétales de violettes glacés</h4>
+                  <p>Et purée de noisette<span>18€</span></p>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle"></i>
+                  </button>
+                </fieldset>
+              </li>
 
-            <li>
-              <div class="menu">
-                <h3></h3>
-                <p></p>
-              </div>
-            </li>
+              <li>
+                <fieldset class="menu">
+                  <h4>Fondant au chocolat</h4>
+                  <p>Revisité<span>22€</span></p>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle"></i>
+                  </button>
+                </fieldset>
+              </li>
 
-            <li>
-              <div class="menu">
-                <h3></h3>
-                <p></p>
-              </div>
-            </li>
-          </ul>
-        </article>
+              <li>
+                <fieldset class="menu">
+                  <h4>Millefeuille croustillant</h4>
+                  <p>Myrtilles et pâte d'amande<span>23€</span></p>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle"></i>
+                  </button>
+                </fieldset>
+              </li>
+            </ul>
+          </article>
 
-        <button class="commander">comander</button>
+          <button class="btn btn--commander">Commander</button>
+        </form>
       </section>
 
-      <footer>
+      <footer class="footer">
         <img src="/images/logo/ohmyfood.png" alt="" />
-        <ul>
-          <li>Proposer un restaurant</li>
-          <li>Devenir partenaire</li>
+        <ul class="liste-footer">
+          <li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
+          <li><i class="fas fa-hands-helping"></i>Devenir partenaire</li>
           <li>Mention légales</li>
           <li>contact</li>
         </ul>
       </footer>
-    </container>
+    </div>
   </body>
 </html>
