Mise en forme et css normal de la page d'acceuil finit manque les effet spéciaux, avancement sur les pages restaurant

--- a/acceuil.html
+++ b/acceuil.html
@@ -36,31 +36,34 @@
         <!--  ASIDE FONCTIONNEMENT -->
 
         <section class="fonctionnement">
-          <h3>Fonctionnement</h3>
+          <h2>Fonctionnement</h2>
 
           <ol class="liste-fonctionnement">
             <li>
               <div class="step">
-                <p><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</p>
+                <i class="fas fa-mobile-alt"></i>
+                <p>Choisissez un restaurant</p>
               </div>
             </li>
 
             <li>
               <div class="step">
-                <p><i class="fas fa-list-ul"></i>Composez votre menu</p>
+                <i class="fas fa-list-ul"></i>
+                <p>Composez votre menu</p>
               </div>
             </li>
 
             <li>
               <div class="step">
-                <p><i class="fas fa-utensils"></i>Dégustez au restaurant</p>
+                <i class="fas fa-store"></i>
+                <p>Dégustez au restaurant</p>
               </div>
             </li>
           </ol>
         </section>
 
         <section class="restaurant">
-          <h3>Restaurants</h3>
+          <h2>Restaurants</h2>
 
           <ul class="liste-restaurant">
             <li class="li-restaurant">
@@ -72,8 +75,8 @@
                     <p>Ménilmontant</p>
                     <i class="far fa-heart"></i>
                   </figcaption>
+                  <span class="nouveau">Nouveau</span>
                 </figure>
-                <span>nouveau</span>
               </a>
             </li>
 
@@ -86,8 +89,8 @@
                     <p>Charonne</p>
                     <i class="far fa-heart"></i>
                   </figcaption>
+                  <span class="nouveau">Nouveau</span>
                 </figure>
-                <span>nouveau</span>
               </a>
             </li>
 
