--- a/pages/a-la-francaise.html
+++ b/pages/a-la-francaise.html
@@ -30,7 +30,7 @@
       </section>
 
       <section class="menu-main">
-        <h1>A la francaise</h1>
+        <h1>A la francaise<i class="far fa-heart"></i></h1>
 
         <form action="" method="get">
           <article class="article-menu">
@@ -38,9 +38,12 @@
             <ul class="liste-menu">
               <li>
                 <fieldset class="menu">
-                  <h4>Tartare de poulpe acidulé</h4>
-                  <p>Aux zestes d'orange<span>25€</span></p>
-                  <button class="btn-menu btn-menu__overlay">
+                  <h3>Tartare de poulpe acidulé</h3>
+                  <div class="menu-content">
+                    <p>Aux zestes d'orange</p>
+                    <span>25€</span>
+                  </div>
+                  <button class="btn-menu btn-menu--none">
                     <i class="fas fa-check-circle"></i>
                   </button>
                 </fieldset>
@@ -48,8 +51,11 @@
 
               <li>
                 <fieldset class="menu">
-                  <h4>Velouté de légumes d'antan</h4>
-                  <p>Carottepanais, topinambour<span>35€</span></p>
+                  <h3>Velouté de légumes d'antan</h3>
+                  <div class="menu-content">
+                    <p>Carottepanais, topinambour</p>
+                    <span>35€</span>
+                  </div>
                   <button class="btn-menu">
                     <i class="fas fa-check-circle"></i>
                   </button>
@@ -58,8 +64,11 @@
 
               <li>
                 <fieldset class="menu">
-                  <h4>Soupe à l'ognon</h4>
-                  <p>Revisitée<span>20€</span></p>
+                  <h3>Soupe à l'ognon</h3>
+                  <div class="menu-content">
+                    <p>Revisitée</p>
+                    <span>20€</span>
+                  </div>
                   <button class="btn-menu">
                     <i class="fas fa-check-circle"></i>
                   </button>
@@ -73,8 +82,11 @@
             <ul class="liste-menu">
               <li>
                 <fieldset class="menu">
-                  <h4>Coquille Saint-Jacques</h4>
-                  <p>Accompagnées d'une purée de panais<span>40€</span></p>
+                  <h3>Coquille Saint-Jacques</h3>
+                  <div class="menu-content">
+                    <p>Accompagnées d'une purée de panais</p>
+                    <span>40€</span>
+                  </div>
                   <button class="btn-menu">
                     <i class="fas fa-check-circle"></i>
                   </button>
@@ -83,8 +95,11 @@
 
               <li>
                 <fieldset class="menu">
-                  <h4>Magret de canard</h4>
-                  <p>Et parmentier de pommes de terres<span>35€</span></p>
+                  <h3>Magret de canard</h3>
+                  <div class="menu-content">
+                    <p>Et parmentier de pommes de terres</p>
+                    <span>35€</span>
+                  </div>
                   <button class="btn-menu">
                     <i class="fas fa-check-circle"></i>
                   </button>
@@ -93,8 +108,11 @@
 
               <li>
                 <fieldset class="menu">
-                  <h4>Pigeonneau d'Ille-et-Vilaine</h4>
-                  <p>Sur son lit de gnocchis aux légumes<span>44€</span></p>
+                  <h3>Pigeonneau d'Ille-et-Vilaine</h3>
+                  <div class="menu-content">
+                    <p>Sur son lit de gnocchis aux légumes</p>
+                    <span>44€</span>
+                  </div>
                   <button class="btn-menu">
                     <i class="fas fa-check-circle"></i>
                   </button>
@@ -108,8 +126,11 @@
             <ul class="liste-menu">
               <li>
                 <fieldset class="menu">
-                  <h4>Pétales de violettes glacés</h4>
-                  <p>Et purée de noisette<span>18€</span></p>
+                  <h3>Pétales de violettes glacés</h3>
+                  <div class="menu-content">
+                    <p>Et purée de noisette</p>
+                    <span>18€</span>
+                  </div>
                   <button class="btn-menu">
                     <i class="fas fa-check-circle"></i>
                   </button>
@@ -118,8 +139,11 @@
 
               <li>
                 <fieldset class="menu">
-                  <h4>Fondant au chocolat</h4>
-                  <p>Revisité<span>22€</span></p>
+                  <h3>Fondant au chocolat</h3>
+                  <div class="menu-content">
+                    <p>Revisité</p>
+                    <span>22€</span>
+                  </div>
                   <button class="btn-menu">
                     <i class="fas fa-check-circle"></i>
                   </button>
@@ -128,8 +152,11 @@
 
               <li>
                 <fieldset class="menu">
-                  <h4>Millefeuille croustillant</h4>
-                  <p>Myrtilles et pâte d'amande<span>23€</span></p>
+                  <h3>Millefeuille croustillant</h3>
+                  <div class="menu-content">
+                    <p>Myrtilles et pâte d'amande</p>
+                    <span>23€</span>
+                  </div>
                   <button class="btn-menu">
                     <i class="fas fa-check-circle"></i>
                   </button>
