correction pour github

--- a/pages/a-la-francaise.html
+++ b/pages/a-la-francaise.html
@@ -17,7 +17,7 @@
   <body>
     <div class="container">
       <header class="header">
-        <a href="/acceuil.html"><i class="fas fa-arrow-left"></i></a>
+        <a href="/index.html"><i class="fas fa-arrow-left"></i></a>
         <img
           class="logo logo--restaurant"
           src="/images/logo/ohmyfood.png"
@@ -43,7 +43,7 @@
                     <p>Aux zestes d'orange</p>
                     <span>25€</span>
                   </div>
-                  <button class="btn-menu btn-menu--none">
+                  <button class="btn-menu">
                     <i class="fas fa-check-circle"></i>
                   </button>
                 </fieldset>
