Correction et mmise a jour du css

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <p>
             Découvrer des restaurants d'éxception, séléctionnés par nos soins.
           </p>
-          <button class="btn btn--search">Explorer nos restaurants</button>
+          <a href="" class="btn">Explorer nos restaurants</a>
         </section>
 
         <!--  ASIDE FONCTIONNEMENT -->
@@ -39,25 +39,16 @@
           <h2>Fonctionnement</h2>
 
           <ol class="liste-fonctionnement">
-            <li>
-              <div class="step">
-                <i class="fas fa-mobile-alt"></i>
-                <p>Choisissez un restaurant</p>
-              </div>
+            <li class="step">
+              <p><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</p>
             </li>
 
             <li>
-              <div class="step">
-                <i class="fas fa-list-ul"></i>
-                <p>Composez votre menu</p>
-              </div>
+              <p><i class="fas fa-list-ul"></i>Composez votre menu</p>
             </li>
 
             <li>
-              <div class="step">
-                <i class="fas fa-store"></i>
-                <p>Dégustez au restaurant</p>
-              </div>
+              <p><i class="fas fa-store"></i>Dégustez au restaurant</p>
             </li>
           </ol>
         </section>
