--- a/pages/a-la-francaise.html
+++ b/pages/a-la-francaise.html
@@ -32,141 +32,139 @@
       <section class="menu-main">
         <h1>A la francaise<i class="far fa-heart"></i></h1>
 
-        <form action="" method="get">
-          <article class="article-menu">
-            <h3>ENTREES</h3>
-            <ul class="liste-menu">
-              <li>
-                <fieldset class="menu">
-                  <h3>Tartare de poulpe acidulé</h3>
-                  <div class="menu-content">
-                    <p>Aux zestes d'orange</p>
-                    <span>25€</span>
-                  </div>
-                  <button class="btn-menu">
-                    <i class="fas fa-check-circle"></i>
-                  </button>
-                </fieldset>
-              </li>
+        <article class="article-menu">
+          <h3>ENTREES</h3>
+          <ul class="liste-menu">
+            <li class="menu">
+              <article>
+                <h3>Tartare de poulpe acidulé</h3>
+                <div class="menu-content">
+                  <p>Aux zestes d'orange</p>
+                  <span>25€</span>
+                </div>
+              </article>
+              <button class="btn-menu">
+                <i class="fas fa-check-circle"></i>
+              </button>
+            </li>
 
-              <li>
-                <fieldset class="menu">
-                  <h3>Velouté de légumes d'antan</h3>
-                  <div class="menu-content">
-                    <p>Carottepanais, topinambour</p>
-                    <span>35€</span>
-                  </div>
-                  <button class="btn-menu">
-                    <i class="fas fa-check-circle"></i>
-                  </button>
-                </fieldset>
-              </li>
+            <li class="menu">
+              <article>
+                <h3>Velouté de légumes d'antan</h3>
+                <div class="menu-content">
+                  <p>Carottepanais, topinambour</p>
+                  <span>35€</span>
+                </div>
+              </article>
+              <button class="btn-menu">
+                <i class="fas fa-check-circle"></i>
+              </button>
+            </li>
 
-              <li>
-                <fieldset class="menu">
-                  <h3>Soupe à l'ognon</h3>
-                  <div class="menu-content">
-                    <p>Revisitée</p>
-                    <span>20€</span>
-                  </div>
-                  <button class="btn-menu">
-                    <i class="fas fa-check-circle"></i>
-                  </button>
-                </fieldset>
-              </li>
-            </ul>
-          </article>
+            <li class="menu">
+              <article>
+                <h3>Soupe à l'ognon</h3>
+                <div class="menu-content">
+                  <p>Revisitée</p>
+                  <span>20€</span>
+                </div>
+              </article>
+              <button class="btn-menu">
+                <i class="fas fa-check-circle"></i>
+              </button>
+            </li>
+          </ul>
+        </article>
 
-          <article class="article-menu">
-            <h3>PLATS</h3>
-            <ul class="liste-menu">
-              <li>
-                <fieldset class="menu">
-                  <h3>Coquille Saint-Jacques</h3>
-                  <div class="menu-content">
-                    <p>Accompagnées d'une purée de panais</p>
-                    <span>40€</span>
-                  </div>
-                  <button class="btn-menu">
-                    <i class="fas fa-check-circle"></i>
-                  </button>
-                </fieldset>
-              </li>
+        <article class="article-menu">
+          <h3>PLATS</h3>
+          <ul class="liste-menu">
+            <li class="menu">
+              <article>
+                <h3>Coquille Saint-Jacques</h3>
+                <div class="menu-content">
+                  <p>Accompagnées d'une purée de panais</p>
+                  <span>40€</span>
+                </div>
+              </article>
+              <button class="btn-menu">
+                <i class="fas fa-check-circle"></i>
+              </button>
+            </li>
 
-              <li>
-                <fieldset class="menu">
-                  <h3>Magret de canard</h3>
-                  <div class="menu-content">
-                    <p>Et parmentier de pommes de terres</p>
-                    <span>35€</span>
-                  </div>
-                  <button class="btn-menu">
-                    <i class="fas fa-check-circle"></i>
-                  </button>
-                </fieldset>
-              </li>
+            <li class="menu">
+              <article>
+                <h3>Magret de canard</h3>
+                <div class="menu-content">
+                  <p>Et parmentier de pommes de terres</p>
+                  <span>35€</span>
+                </div>
+              </article>
+              <button class="btn-menu">
+                <i class="fas fa-check-circle"></i>
+              </button>
+            </li>
 
-              <li>
-                <fieldset class="menu">
-                  <h3>Pigeonneau d'Ille-et-Vilaine</h3>
-                  <div class="menu-content">
-                    <p>Sur son lit de gnocchis aux légumes</p>
-                    <span>44€</span>
-                  </div>
-                  <button class="btn-menu">
-                    <i class="fas fa-check-circle"></i>
-                  </button>
-                </fieldset>
-              </li>
-            </ul>
-          </article>
+            <li class="menu">
+              <article>
+                <h3>Pigeonneau d'Ille-et-Vilaine</h3>
+                <div class="menu-content">
+                  <p>Sur son lit de gnocchis aux légumes</p>
+                  <span>44€</span>
+                </div>
+              </article>
+              <button class="btn-menu">
+                <i class="fas fa-check-circle"></i>
+              </button>
+            </li>
+          </ul>
+        </article>
 
-          <article class="article-menu">
-            <h3>DESSERTS</h3>
-            <ul class="liste-menu">
-              <li>
-                <fieldset class="menu">
-                  <h3>Pétales de violettes glacés</h3>
-                  <div class="menu-content">
-                    <p>Et purée de noisette</p>
-                    <span>18€</span>
-                  </div>
-                  <button class="btn-menu">
-                    <i class="fas fa-check-circle"></i>
-                  </button>
-                </fieldset>
-              </li>
+        <article class="article-menu">
+          <h3>DESSERTS</h3>
+          <ul class="liste-menu">
+            <li class="menu">
+              <article>
+                <h3>Pétales de violettes glacés</h3>
+                <div class="menu-content">
+                  <p>Et purée de noisette</p>
+                  <span>18€</span>
+                </div>
+              </article>
+              <button class="btn-menu">
+                <i class="fas fa-check-circle"></i>
+              </button>
+            </li>
 
-              <li>
-                <fieldset class="menu">
-                  <h3>Fondant au chocolat</h3>
-                  <div class="menu-content">
-                    <p>Revisité</p>
-                    <span>22€</span>
-                  </div>
-                  <button class="btn-menu">
-                    <i class="fas fa-check-circle"></i>
-                  </button>
-                </fieldset>
-              </li>
+            <li class="menu">
+              <article>
+                <h3>Fondant au chocolat</h3>
+                <div class="menu-content">
+                  <p>Revisité</p>
+                  <span>22€</span>
+                </div>
+              </article>
+              <button class="btn-menu">
+                <i class="fas fa-check-circle"></i>
+              </button>
+            </li>
 
-              <li>
-                <fieldset class="menu">
-                  <h3>Millefeuille croustillant</h3>
-                  <div class="menu-content">
-                    <p>Myrtilles et pâte d'amande</p>
-                    <span>23€</span>
-                  </div>
-                  <button class="btn-menu">
-                    <i class="fas fa-check-circle"></i>
-                  </button>
-                </fieldset>
-              </li>
-            </ul>
-          </article>
+            <li class="menu">
+              <article>
+                <h3>Millefeuille croustillant</h3>
+                <div class="menu-content">
+                  <p>Myrtilles et pâte d'amande</p>
+                  <span>23€</span>
+                </div>
+              </article>
+              <button class="btn-menu">
+                <i class="fas fa-check-circle"></i>
+              </button>
+            </li>
+          </ul>
+        </article>
 
-          <button class="btn btn--commander">Commander</button>
-        </form>
+        <button class="btn btn--commander">Commander</button>
       </section>
 
       <footer class="footer">
