avacement sur les css des pages restaurant

--- a/pages/a-la-francaise.html
+++ b/pages/a-la-francaise.html
@@ -33,7 +33,7 @@
         <h1>A la francaise<i class="far fa-heart"></i></h1>
 
         <article class="article-menu">
-          <h3>ENTREES</h3>
+          <h3 class="menu-titre-carte">ENTREES</h3>
           <ul class="liste-menu">
             <li class="menu">
               <article>
@@ -77,7 +77,7 @@
         </article>
 
         <article class="article-menu">
-          <h3>PLATS</h3>
+          <h3 class="menu-titre-carte">PLATS</h3>
           <ul class="liste-menu">
             <li class="menu">
               <article>
@@ -121,7 +121,7 @@
         </article>
 
         <article class="article-menu">
-          <h3>DESSERTS</h3>
+          <h3 class="menu-titre-carte">DESSERTS</h3>
           <ul class="liste-menu">
             <li class="menu">
               <article>
