--- a/pages/a-la-francaise.html
+++ b/pages/a-la-francaise.html
@@ -37,7 +37,7 @@
           <ul class="liste-menu">
             <li class="menu">
               <article>
-                <h3>Tartare de poulpe acidulé</h3>
+                <h3 class="menu-titre">Tartare de poulpe acidulé</h3>
                 <div class="menu-content">
                   <p>Aux zestes d'orange</p>
                   <span>25€</span>
@@ -50,7 +50,7 @@
 
             <li class="menu">
               <article>
-                <h3>Velouté de légumes d'antan</h3>
+                <h3 class="menu-titre">Velouté de légumes d'antan</h3>
                 <div class="menu-content">
                   <p>Carottepanais, topinambour</p>
                   <span>35€</span>
@@ -63,7 +63,7 @@
 
             <li class="menu">
               <article>
-                <h3>Soupe à l'ognon</h3>
+                <h3 class="menu-titre">Soupe à l'ognon</h3>
                 <div class="menu-content">
                   <p>Revisitée</p>
                   <span>20€</span>
@@ -81,7 +81,7 @@
           <ul class="liste-menu">
             <li class="menu">
               <article>
-                <h3>Coquille Saint-Jacques</h3>
+                <h3 class="menu-titre">Coquille Saint-Jacques</h3>
                 <div class="menu-content">
                   <p>Accompagnées d'une purée de panais</p>
                   <span>40€</span>
@@ -94,7 +94,7 @@
 
             <li class="menu">
               <article>
-                <h3>Magret de canard</h3>
+                <h3 class="menu-titre">Magret de canard</h3>
                 <div class="menu-content">
                   <p>Et parmentier de pommes de terres</p>
                   <span>35€</span>
@@ -107,7 +107,7 @@
 
             <li class="menu">
               <article>
-                <h3>Pigeonneau d'Ille-et-Vilaine</h3>
+                <h3 class="menu-titre">Pigeonneau d'Ille-et-Vilaine</h3>
                 <div class="menu-content">
                   <p>Sur son lit de gnocchis aux légumes</p>
                   <span>44€</span>
@@ -125,7 +125,7 @@
           <ul class="liste-menu">
             <li class="menu">
               <article>
-                <h3>Pétales de violettes glacés</h3>
+                <h3 class="menu-titre">Pétales de violettes glacés</h3>
                 <div class="menu-content">
                   <p>Et purée de noisette</p>
                   <span>18€</span>
@@ -138,7 +138,7 @@
 
             <li class="menu">
               <article>
-                <h3>Fondant au chocolat</h3>
+                <h3 class="menu-titre">Fondant au chocolat</h3>
                 <div class="menu-content">
                   <p>Revisité</p>
                   <span>22€</span>
@@ -151,7 +151,7 @@
 
             <li class="menu">
               <article>
-                <h3>Millefeuille croustillant</h3>
+                <h3 class="menu-titre">Millefeuille croustillant</h3>
                 <div class="menu-content">
                   <p>Myrtilles et pâte d'amande</p>
                   <span>23€</span>
