Avancement css generale

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                   <figcaption>
                     <h4>La palette de goût</h4>
                     <p>Ménilmontant</p>
-                    <i class="far fa-heart"></i><i class="fas fa-heart"></i>
+                    <i class="far fa-heart"></i
+                    ><!-- <i class="fas fa-heart"></i> -->
                   </figcaption>
                   <span class="nouveau">Nouveau</span>
                 </figure>
