--- a/pages/la-note-enchantee.html
+++ b/pages/la-note-enchantee.html
@@ -12,12 +12,12 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap"
       rel="stylesheet"
     />
-    <title>A la francaise</title>
+    <title>La note enchantée</title>
   </head>
   <body>
     <div class="container">
       <header class="header">
-        <a href="/acceuil.html"><i class="fas fa-arrow-left"></i></a>
+        <a href="/index.html"><i class="fas fa-arrow-left"></i></a>
         <img
           class="logo logo--restaurant"
           src="/images/logo/ohmyfood.png"
@@ -30,128 +30,154 @@
       </section>
 
       <section class="menu-main">
-        <h1>
-          La note enchantée
-        </h1>
+        <h1>La note enchantée<i class="far fa-heart"></i></h1>
 
-        <form action="" method="get">
-          <article class="article-menu">
-            <h3>ENTREES</h3>
-            <ul class="liste-menu">
-              <li>
-                <fieldset class="menu">
-                  <h4>Ravioles de foi gras</h4>
-                  <p>Accompgnésde leur crème à la truffe<span>25€</span></p>
-                  <button class="btn-menu btn-menu__overlay">
-                    <i class="fas fa-check-circle"></i>
-                  </button>
-                </fieldset>
-              </li>
+        <article class="article-menu">
+          <h3 class="menu-titre-carte">ENTREES</h3>
+          <ul class="liste-menu">
+            <li class="menu">
+              <article>
+                <h3 class="menu-titre">Rviole de foie gras</h3>
+                <div class="menu-content">
+                  <p>Accompagnées de leur crème à la truffe</p>
+                  <span>25€</span>
+                </div>
+              </article>
+              <button class="btn-menu">
+                <i class="fas fa-check-circle"></i>
+              </button>
+            </li>
 
-              <li>
-                <fieldset class="menu">
-                  <h4>Caviar osciètre</h4>
-                  <p>Sur blinis à la farine de blé noir<span>35€</span></p>
-                  <button class="btn-menu">
-                    <i class="fas fa-check-circle"></i>
-                  </button>
-                </fieldset>
-              </li>
+            <li class="menu">
+              <article>
+                <h3 class="menu-titre">Caviar osciètre</h3>
+                <div class="menu-content">
+                  <p>Sur blini à la farine de blé noir</p>
+                  <span>35€</span>
+                </div>
+              </article>
+              <button class="btn-menu">
+                <i class="fas fa-check-circle"></i>
+              </button>
+            </li>
 
-              <li>
-                <fieldset class="menu">
-                  <h4>Homard et espuma de...</h4>
-                  <p>Mariné aux zests d'orange<span>20€</span></p>
-                  <button class="btn-menu">
-                    <i class="fas fa-check-circle"></i>
-                  </button>
-                </fieldset>
+            <li class="menu">
+              <article>
+                <h3 class="menu-titre">Homard et espuma de ...</h3>
+                <div class="menu-content">
+                  <p>Mariné aux zests d'orange</p>
+                  <span>20€</span>
+                </div>
+              </article>
+              <button class="btn-menu">
+                <i class="fas fa-check-circle"></i>
+              </button>
+              
+            <li class="menu">
+              <article>
+                <h3 class="menu-titre">Foie gras de canard cuit entier</h3>
+                <div class="menu-content">
+                  <p>Confiture de figue et pain toasté</p>
+                  <span>35€</span>
+                </div>
+              </article>
+              <button class="btn-menu">
+                <i class="fas fa-check-circle"></i>
+              </button>
+            </li>
+            </li>
+          </ul>
+        </article>
 
-                <li>
-                  <fieldset class="menu">
-                    <h4>Foie gras de cannard cuit entier</h4>
-                    <p>Confiture de figue et pain toasté<span>35€</span></p>
-                    <button class="btn-menu">
-                      <i class="fas fa-check-circle"></i>
-                    </button>
-                  </fieldset>
-                </li>
-              </li>
-            </ul>
-          </article>
+        <article class="article-menu">
+          <h3 class="menu-titre-carte">PLATS</h3>
+          <ul class="liste-menu">
+            <li class="menu">
+              <article>
+                <h3 class="menu-titre">Noix de coquilles Saint-Jacques</h3>
+                <div class="menu-content">
+                  <p>Sur lit de purée de celer-rave</p>
+                  <span>40€</span>
+                </div>
+              </article>
+              <button class="btn-menu">
+                <i class="fas fa-check-circle"></i>
+              </button>
+            </li>
 
-          <article class="article-menu">
-            <h3>PLATS</h3>
-            <ul class="liste-menu">
-              <li>
-                <fieldset class="menu">
-                  <h4>Noix de coquilles Saint-Jacques</h4>
-                  <p>Sur lit de purée de céleri-rave<span>40€</span></p>
-                  <button class="btn-menu">
-                    <i class="fas fa-check-circle"></i>
-                  </button>
-                </fieldset>
-              </li>
+            <li class="menu">
+              <article>
+                <h3 class="menu-titre">Langoustine poêlée</h3>
+                <div class="menu-content">
+                  <p>purée de patate douce</p>
+                  <span>35€</span>
+                </div>
+              </article>
+              <button class="btn-menu">
+                <i class="fas fa-check-circle"></i>
+              </button>
+            </li>
 
-              <li>
-                <fieldset class="menu">
-                  <h4>Langoustine poêlée</h4>
-                  <p>Purée de patate douce<span>35€</span></p>
-                  <button class="btn-menu">
-                    <i class="fas fa-check-circle"></i>
-                  </button>
-                </fieldset>
-              </li>
+            <li class="menu">
+              <article>
+                <h3 class="menu-titre">Mijoté de queu de boeuf</h3>
+                <div class="menu-content">
+                  <p>Et riz sauvage aux zests de citron</p>
+                  <span>44€</span>
+                </div>
+              </article>
+              <button class="btn-menu">
+                <i class="fas fa-check-circle"></i>
+              </button>
+            </li>
+          </ul>
+        </article>
 
-              <li>
-                <fieldset class="menu">
-                  <h4>Mijoté de queu de boeuf</h4>
-                  <p>Et riz sauvage aux zestz de citron<span>44€</span></p>
-                  <button class="btn-menu">
-                    <i class="fas fa-check-circle"></i>
-                  </button>
-                </fieldset>
-              </li>
-            </ul>
-          </article>
+        <article class="article-menu">
+          <h3 class="menu-titre-carte">DESSERTS</h3>
+          <ul class="liste-menu">
+            <li class="menu">
+              <article>
+                <h3 class="menu-titre">Macaron noisette et chocolat</h3>
+                <div class="menu-content">
+                  <p>Glace au caramel brun et sel de Guérande</p>
+                  <span>18€</span>
+                </div>
+              </article>
+              <button class="btn-menu">
+                <i class="fas fa-check-circle"></i>
+              </button>
+            </li>
 
-          <article class="article-menu">
-            <h3>DESSERTS</h3>
-            <ul class="liste-menu">
-              <li>
-                <fieldset class="menu">
-                  <h4>Macaron noisettes et chocaolat</h4>
-                  <p>Glace au caramel brun et sel de Guérande<span>18€</span></p>
-                  <button class="btn-menu">
-                    <i class="fas fa-check-circle"></i>
-                  </button>
-                </fieldset>
-              </li>
+            <li class="menu">
+              <article>
+                <h3 class="menu-titre">Baba au rhum revisitée</h3>
+                <div class="menu-content">
+                  <p>Avec son coulit de citron</p>
+                  <span>22€</span>
+                </div>
+              </article>
+              <button class="btn-menu">
+                <i class="fas fa-check-circle"></i>
+              </button>
+            </li>
 
-              <li>
-                <fieldset class="menu">
-                  <h4>Baba au rhum revisité</h4>
-                  <p>Avec son couis de citron<span>22€</span></p>
-                  <button class="btn-menu">
-                    <i class="fas fa-check-circle"></i>
-                  </button>
-                </fieldset>
-              </li>
+            <li class="menu">
+              <article>
+                <h3 class="menu-titre">Tarte au citron meringuée</h3>
+                <div class="menu-content">
+                  <p>destructurée</p>
+                  <span>23€</span>
+                </div>
+              </article>
+              <button class="btn-menu">
+                <i class="fas fa-check-circle"></i>
+              </button>
+            </li>
+          </ul>
+        </article>
 
-              <li>
-                <fieldset class="menu">
-                  <h4>Tarte au citron meringuée</h4>
-                  <p>Destructuée<span>23€</span></p>
-                  <button class="btn-menu">
-                    <i class="fas fa-check-circle"></i>
-                  </button>
-                </fieldset>
-              </li>
-            </ul>
-          </article>
-
-          <button class="btn btn--commander">Commander</button>
-        </form>
+        <button class="btn btn--commander">Commander</button>
       </section>
 
       <footer class="footer">
