--- a/pages/la-note-enchantee.html
+++ b/pages/la-note-enchantee.html
@@ -32,6 +32,8 @@
       <section class="menu-main">
         <h1>La note enchantée<i class="far fa-heart"></i></h1>
 
+        <ul class="menu-contenu">
+          <li>
         <article class="article-menu">
           <h3 class="menu-titre-carte">ENTREES</h3>
           <ul class="liste-menu">
@@ -88,7 +90,8 @@
             </li>
           </ul>
         </article>
-
+          </li>
+          <li>
         <article class="article-menu">
           <h3 class="menu-titre-carte">PLATS</h3>
           <ul class="liste-menu">
@@ -132,7 +135,8 @@
             </li>
           </ul>
         </article>
-
+      </li>
+      <li>
         <article class="article-menu">
           <h3 class="menu-titre-carte">DESSERTS</h3>
           <ul class="liste-menu">
@@ -176,7 +180,8 @@
             </li>
           </ul>
         </article>
-
+      </li>
+        </ul>
         <button class="btn btn--commander">Commander</button>
       </section>
 
