--- a/pages/a-la-francaise.html
+++ b/pages/a-la-francaise.html
@@ -32,138 +32,143 @@
       <section class="menu-main">
         <h1>A la francaise<i class="far fa-heart"></i></h1>
 
-        <article class="article-menu">
-          <h3 class="menu-titre-carte">ENTREES</h3>
-          <ul class="liste-menu">
-            <li class="menu">
-              <article>
-                <h3 class="menu-titre">Tartare de poulpe acidulé</h3>
-                <div class="menu-content">
-                  <p>Aux zestes d'orange</p>
-                  <span>25€</span>
-                </div>
-              </article>
-              <button class="btn-menu">
-                <i class="fas fa-check-circle"></i>
-              </button>
-            </li>
+        <ul class="menu-contenu">
+          <li>
+            <article class="article-menu">
+              <h3 class="menu-titre-carte">ENTREES</h3>
+              <ul class="liste-menu">
+                <li class="menu">
+                  <article>
+                    <h3 class="menu-titre">Tartare de poulpe acidulé</h3>
+                    <div class="menu-content">
+                      <p>Aux zestes d'orange</p>
+                      <span>25€</span>
+                    </div>
+                  </article>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle"></i>
+                  </button>
+                </li>
 
-            <li class="menu">
-              <article>
-                <h3 class="menu-titre">Velouté de légumes d'antan</h3>
-                <div class="menu-content">
-                  <p>Carottepanais, topinambour</p>
-                  <span>35€</span>
-                </div>
-              </article>
-              <button class="btn-menu">
-                <i class="fas fa-check-circle"></i>
-              </button>
-            </li>
+                <li class="menu">
+                  <article>
+                    <h3 class="menu-titre">Velouté de légumes d'antan</h3>
+                    <div class="menu-content">
+                      <p>Carottepanais, topinambour</p>
+                      <span>35€</span>
+                    </div>
+                  </article>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle"></i>
+                  </button>
+                </li>
 
-            <li class="menu">
-              <article>
-                <h3 class="menu-titre">Soupe à l'ognon</h3>
-                <div class="menu-content">
-                  <p>Revisitée</p>
-                  <span>20€</span>
-                </div>
-              </article>
-              <button class="btn-menu">
-                <i class="fas fa-check-circle"></i>
-              </button>
-            </li>
-          </ul>
-        </article>
+                <li class="menu">
+                  <article>
+                    <h3 class="menu-titre">Soupe à l'ognon</h3>
+                    <div class="menu-content">
+                      <p>Revisitée</p>
+                      <span>20€</span>
+                    </div>
+                  </article>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle"></i>
+                  </button>
+                </li>
+              </ul>
+            </article>
+          </li>
+          <li>
+            <article class="article-menu">
+              <h3 class="menu-titre-carte">PLATS</h3>
+              <ul class="liste-menu">
+                <li class="menu">
+                  <article>
+                    <h3 class="menu-titre">Coquille Saint-Jacques</h3>
+                    <div class="menu-content">
+                      <p>Accompagnées d'une purée de panais</p>
+                      <span>40€</span>
+                    </div>
+                  </article>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle"></i>
+                  </button>
+                </li>
 
-        <article class="article-menu">
-          <h3 class="menu-titre-carte">PLATS</h3>
-          <ul class="liste-menu">
-            <li class="menu">
-              <article>
-                <h3 class="menu-titre">Coquille Saint-Jacques</h3>
-                <div class="menu-content">
-                  <p>Accompagnées d'une purée de panais</p>
-                  <span>40€</span>
-                </div>
-              </article>
-              <button class="btn-menu">
-                <i class="fas fa-check-circle"></i>
-              </button>
-            </li>
+                <li class="menu">
+                  <article>
+                    <h3 class="menu-titre">Magret de canard</h3>
+                    <div class="menu-content">
+                      <p>Et parmentier de pommes de terres</p>
+                      <span>35€</span>
+                    </div>
+                  </article>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle"></i>
+                  </button>
+                </li>
 
-            <li class="menu">
-              <article>
-                <h3 class="menu-titre">Magret de canard</h3>
-                <div class="menu-content">
-                  <p>Et parmentier de pommes de terres</p>
-                  <span>35€</span>
-                </div>
-              </article>
-              <button class="btn-menu">
-                <i class="fas fa-check-circle"></i>
-              </button>
-            </li>
+                <li class="menu">
+                  <article>
+                    <h3 class="menu-titre">Pigeonneau d'Ille-et-Vilaine</h3>
+                    <div class="menu-content">
+                      <p>Sur son lit de gnocchis aux légumes</p>
+                      <span>44€</span>
+                    </div>
+                  </article>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle"></i>
+                  </button>
+                </li>
+              </ul>
+            </article>
+          </li>
+          <li>
+            <article class="article-menu">
+              <h3 class="menu-titre-carte">DESSERTS</h3>
+              <ul class="liste-menu">
+                <li class="menu">
+                  <article>
+                    <h3 class="menu-titre">Pétales de violettes glacés</h3>
+                    <div class="menu-content">
+                      <p>Et purée de noisette</p>
+                      <span>18€</span>
+                    </div>
+                  </article>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle"></i>
+                  </button>
+                </li>
 
-            <li class="menu">
-              <article>
-                <h3 class="menu-titre">Pigeonneau d'Ille-et-Vilaine</h3>
-                <div class="menu-content">
-                  <p>Sur son lit de gnocchis aux légumes</p>
-                  <span>44€</span>
-                </div>
-              </article>
-              <button class="btn-menu">
-                <i class="fas fa-check-circle"></i>
-              </button>
-            </li>
-          </ul>
-        </article>
+                <li class="menu">
+                  <article>
+                    <h3 class="menu-titre">Fondant au chocolat</h3>
+                    <div class="menu-content">
+                      <p>Revisité</p>
+                      <span>22€</span>
+                    </div>
+                  </article>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle"></i>
+                  </button>
+                </li>
 
-        <article class="article-menu">
-          <h3 class="menu-titre-carte">DESSERTS</h3>
-          <ul class="liste-menu">
-            <li class="menu">
-              <article>
-                <h3 class="menu-titre">Pétales de violettes glacés</h3>
-                <div class="menu-content">
-                  <p>Et purée de noisette</p>
-                  <span>18€</span>
-                </div>
-              </article>
-              <button class="btn-menu">
-                <i class="fas fa-check-circle"></i>
-              </button>
-            </li>
-
-            <li class="menu">
-              <article>
-                <h3 class="menu-titre">Fondant au chocolat</h3>
-                <div class="menu-content">
-                  <p>Revisité</p>
-                  <span>22€</span>
-                </div>
-              </article>
-              <button class="btn-menu">
-                <i class="fas fa-check-circle"></i>
-              </button>
-            </li>
-
-            <li class="menu">
-              <article>
-                <h3 class="menu-titre">Millefeuille croustillant</h3>
-                <div class="menu-content">
-                  <p>Myrtilles et pâte d'amande</p>
-                  <span>23€</span>
-                </div>
-              </article>
-              <button class="btn-menu">
-                <i class="fas fa-check-circle"></i>
-              </button>
-            </li>
-          </ul>
-        </article>
-
+                <li class="menu">
+                  <article>
+                    <h3 class="menu-titre">Millefeuille croustillant</h3>
+                    <div class="menu-content">
+                      <p>Myrtilles et pâte d'amande</p>
+                      <span>23€</span>
+                    </div>
+                  </article>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle"></i>
+                  </button>
+                </li>
+              </ul>
+            </article>
+          </li>
+        </ul>
         <button class="btn btn--commander">Commander</button>
       </section>
 
