animation du menu et des coeur bientot finit et version desktop finit

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                   <figcaption>
                     <h4>La palette de goût</h4>
                     <p>Ménilmontant</p>
-                    <i class="far fa-heart"></i><i class="fas fa-heart"></i>
+                    <i class="far fa-heart"></i
+                    ><i class="fas fa-heart heart"></i>
                   </figcaption>
                   <span class="nouveau">Nouveau</span>
                 </figure>
@@ -78,7 +79,8 @@
                   <figcaption>
                     <h4>La note anchantée</h4>
                     <p>Charonne</p>
-                    <i class="far fa-heart"></i>
+                    <i class="far fa-heart"></i
+                    ><i class="fas fa-heart heart"></i>
                   </figcaption>
                   <span class="nouveau">Nouveau</span>
                 </figure>
@@ -92,7 +94,8 @@
                   <figcaption>
                     <h4>A la francaise</h4>
                     <p>Cité Rouge</p>
-                    <i class="far fa-heart"></i>
+                    <i class="far fa-heart"></i
+                    ><i class="fas fa-heart heart"></i>
                   </figcaption>
                 </figure>
               </a>
@@ -105,7 +108,8 @@
                   <figcaption>
                     <h4>Le délices des sens</h4>
                     <p>Folie-Méricourt</p>
-                    <i class="far fa-heart"></i>
+                    <i class="far fa-heart"></i
+                    ><i class="fas fa-heart heart"></i>
                   </figcaption>
                 </figure>
               </a>
